# Blend_Image

./: Cargo.toml  README.md
data/: testdem.tif  testhill1.tif
data/test1/: testdem.tiff
src/: adjuster.rs  argparse.rs  blend.rs  blend_image.rs  core.rs  lib.rs  main.rs  utils.rs
tests/: test_burn.rs
