[package]
name = "blend_images"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
photon-rs = "0.3.2"
clap = { version = "4.4.8", features = ["derive"] }  # 命令行参数解析
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"  # 错误处理
lazy_static = "1.4.0"